--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-testing-library": "5.0.1",
     "jest": "27.4.5",
     "postcss": "^8.4.8",
+    "sharp": "^0.30.3",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.4"
   }
