--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "googleapis": "^97.0.0",
+    "lodash.debounce": "^4.0.8",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.1",
