--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
     "babel-jest": "27.4.5",
